--- a/style/style.css
+++ b/style/style.css
@@ -163,9 +163,17 @@ body {
     }
 
         .miniature {
-            background-color: #EC9F35;
             width: 200px;
             height: 200px;
+            display: grid;
+            justify-content: center;
+            text-align: center;
+        }
+
+        .miniature img {
+            margin-top: 0;
+            max-width: 100%;
+            border-radius: 0;
         }
 
     footer {
@@ -227,6 +235,12 @@ h1 {
 b {
     font-weight: bold;
 }
+
+        .miniature h2 {
+            font-size: x-large;
+            font-family: monospace;
+            text-align: center;
+        }
 
     footer {
         font-family: sans-serif;
