--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,7 @@ table {
 
 /* media queries */
 
-@media (min-width: 700px) {
+/*@media (min-width: 700px) {
     section.about {
         grid-template-columns: 1fr 2fr;
     }
@@ -77,7 +77,7 @@ table {
         }
 
 }
-
+*/
 
 /* layout */
 
@@ -123,13 +123,13 @@ body {
         display: grid;
         grid-row-gap: 20px;
         grid-column-gap: 20px;
-        margin: auto 20px;
+        margin: 0 20px;
     }
 
         section img {
             max-width: 100%;
             margin: auto;
-            border-radius: 5px;
+            border-radius: 3px;
         }
 
         section p {
@@ -140,7 +140,11 @@ body {
             font-weight: bold;
         }
 
-    section.about {
+    section.about img {
+        float: left;
+        width: 30%;
+        margin: 0 20px 20px 0;
+        border-radius: 5px;
     }
 
 
@@ -158,8 +162,7 @@ body {
     }
 
     #portfolio {
-        margin: 20px;
-
+        margin: 20px auto;
         display: grid;
         grid-template-columns: repeat(auto-fill, 200px);
         justify-content: center;
@@ -167,7 +170,7 @@ body {
 
         .miniature {
             width: 200px;
-            height: 200px;
+            height: auto;
             display: grid;
             justify-content: center;
             text-align: center;
@@ -176,8 +179,77 @@ body {
         .miniature img {
             margin-top: 0;
             max-width: 100%;
-            border-radius: 0;
+            border-radius: 3px;
         }
+
+    #portfolio p {
+        padding: 0;
+        margin: 5px auto;
+    }
+        
+    #filter {
+        display: flex;
+        justify-content: space-around;
+        border: 1px solid #EC9F35;
+        border-radius: 3px;
+        padding: 5px;
+        margin: auto 20px;
+        font-family: sans-serif;
+        font-size: smaller;
+    }
+
+    #filter p {
+        padding: 0;
+    }
+
+    #filter div {
+        display: flex;
+        align-content: center;
+    }
+
+
+    input {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        
+        border-radius: 50%;
+        width: 12px;
+        height: 12px;
+        margin-right: 5px;
+
+        border: 2px solid #EC9F35;
+    }
+
+    input:checked {
+        border: 6px solid #EC9F35;
+    }
+
+    #imageViewer {
+        display: grid;
+        grid-gap: 5px;
+        justify-content: center;
+    }
+
+    #fullscreen {
+        max-width: 900px;
+        max-height: 675px;
+        margin: auto;
+        border-radius: 3px;
+    }
+
+    #pellicule {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 100%;
+    }
+
+    .imageList {
+        max-width: 120px;
+        max-height: 90px;
+        margin: 3px;
+    }
+
 
     footer {
         padding: 5px 0;
