--- a/style/style.css
+++ b/style/style.css
@@ -232,7 +232,7 @@ body {
     }
 
     #fullscreen {
-        max-width: 900px;
+        max-width: 100%;
         max-height: 675px;
         margin: auto;
         border-radius: 3px;
