--- a/style/style.css
+++ b/style/style.css
@@ -193,7 +193,7 @@ body {
         border: 1px solid #EC9F35;
         border-radius: 3px;
         padding: 5px;
-        margin: auto 20px;
+        margin: auto 0;
         font-family: sans-serif;
         font-size: smaller;
     }
@@ -234,7 +234,7 @@ body {
     #fullscreen {
         max-width: 100%;
         max-height: 675px;
-        margin: auto;
+        margin: 20px auto;
         border-radius: 3px;
     }
 
